--- a/Esterni/Piano_di_qualifica/diario.tex
+++ b/Esterni/Piano_di_qualifica/diario.tex
@@ -2,6 +2,10 @@
 % da includere con \include{diario}
 
 \begin{diario}
+%	3.0.0 & {\AZ} (Responsabile) & 09/04/2017 & Approvazione del documento \\ \hline
+	2.1.0 & {?} (Verificatore) & 30/03/2017 & Verifica del documento \\ \hline
+	2.0.2 & {?} (?) & 29/03/2017 & Revisione della sezione \ref{sec:ob_qual_sw} \\ \hline
+	2.0.1 & {?} (?) & 28/03/2017 & Revisione della sezione \ref{sec:ob_qual_proc} \\ \hline
 	2.0.0 & {\LS} (Responsabile) & 03/03/2017 & Approvazione del documento \\ \hline
 	1.1.0 & {\MM} (Verificatore) & 03/03/2017 & Verifica del documento\\ \hline
 	1.0.7 & {\PB} (Verificatore) & 28/02/2017 & Stesura resoconto attività\\ \hline
