--- a/Interni/Norme_di_progetto/diario.tex
+++ b/Interni/Norme_di_progetto/diario.tex
@@ -2,10 +2,10 @@
 % da includere con \include{diario}
 
 \begin{diario}
-%	3.0.0 & {\AZ} (Verificatore) & 28/03/2017 & Verifica del documento \\ \hline
-%	2.2.0 & {\GG} (Verificatore) & 28/03/2017 & Verifica del documento \\ \hline
-%	2.1.2 & {\LS} (Amministratore) & 30/03/2017 & Modificate sezioni ... (in seguito a revisione di §2.3 del PdQ) \\ \hline
-	2.1.1 & {\LS} (Amministratore) & 30/03/2017 & Modificate sezioni \ref{sec:ruoli}, \ref{sec:leggibil} e \ref{sec:stile} (in seguito a revisione di §2.2 del PdQ) \\ \hline
+%	3.0.0 & {\AZ} (Responsabile) & 10/04/2017 & Approvazione del documento \\ \hline
+	2.2.0 & {\GG} (Verificatore) & 31/03/2017 & Verifica del documento \\ \hline
+	2.1.2 & {\LS} (Amministratore) & 30/03/2017 & Ampliate sezioni \ref{sec:design}, \ref{sec:an_dinam} e \ref{sec:efficienza} (in seguito a revisione di §2.3 del PdQ) \\ \hline
+	2.1.1 & {\LS} (Amministratore) & 30/03/2017 & Ampliate sezioni \ref{sec:ruoli}, \ref{sec:leggibil} e \ref{sec:stile} (in seguito a revisione di §2.2 del PdQ) \\ \hline
 	2.1.0 & {\GG} (Verificatore) & 28/03/2017 & \emph{Walkthrough} dell'intero documento e conseguenti aggiustamenti \\ \hline
 	2.0.0 & {\LS} (Responsabile) & 22/02/2017 & Approvazione del documento \\ \hline
 	1.1.1 & {\GG} (Verificatore) & 22/02/2017 & Spostate le definizioni delle metriche dal PdQ alle NdP (in appendice)  \\ \hline
