scheletro manuale utente + bozza

--- a/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_2_0_0.tex
+++ b/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_2_0_0.tex
@@ -73,13 +73,13 @@ Con il presente documento il gruppo \hx{} si impegna a sviluppare un prodotto ch
 \presgloss
 
 \subsection{Riferimenti}
-\subsubsection{Normativi}
+\subsubsection{Riferimenti normativi}
 \begin{itemize}
 	\item Norme di Progetto: \NdP;
 	\item Capitolato d'appalto C6, \proj: \url{www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6.pdf}, visitato in data 08/02/2017.
 \end{itemize}
 
-\subsubsection{Informativi}
+\subsubsection{Riferimenti informativi}
 \begin{itemize}
 	\item \textbf{Studio di Fattibilità}: \SdF;
 	\item \textbf{Diagrammi dei casi d'uso}: \\
