--- a/util/hx-macro.sty
+++ b/util/hx-macro.sty
@@ -5,6 +5,7 @@
 \newcommand{\proj}{\emph{SWEDesigner}}
 \newcommand{\hx}{Hivex}
 \newcommand{\repo}{\url{https://github.com/hivex-unipd/swedesigner}}
+\newcommand{\webroot}{http://INDIRIZZO_OFFUSCATO}
 \newcommand{\repodoc}{\url{https://github.com/hivex-unipd/swedesigner-doc}}
 \newcommand{\email}{\href{mailto:hivex.team@gmail.com}{hivex.team@gmail.com}}
 
