--- a/Esterni/Manuale_utente/diario.tex
+++ b/Esterni/Manuale_utente/diario.tex
@@ -2,5 +2,6 @@
 % da includere con \include{diario}
 
 \begin{diario}
-	0.0.1 & {\GG} (Amministratore) & 02/04/2017 & Stesura scheletro documento\\ \hline
+	0.0.2 & {\GG} (Amministratore) & 04/04/2017 & Stesura introduzione, sezione \ref{sec:problemi} e inizio sezione \ref{sec:utilizzo} \\ \hline
+	0.0.1 & {\GG} (Amministratore) & 02/04/2017 & Stesura scheletro documento \\ \hline
 \end{diario}
